--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.1",
     "antd": "^5.15.2",
     "next": "14.1.3",
     "react": "^18",
