--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.1",
     "antd": "^5.15.2",
+    "antd-style": "^3.6.1",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18"
