--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "antd-style": "^3.6.1",
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "redux-actions": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/redux-actions": "^2.6.5",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "typescript": "^5"
