--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.15.2",
     "antd-style": "^3.6.1",
     "axios": "^1.6.8",
+    "js-guid": "^1.0.2",
     "moment": "^2.30.1",
     "next": "14.1.3",
     "react": "^18",
