--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,13 @@
     "antd": "^5.15.2",
     "antd-style": "^3.6.1",
     "axios": "^1.6.8",
+    "dayjs": "^1.11.10",
     "js-guid": "^1.0.2",
     "moment": "^2.30.1",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-error-boundary": "^4.0.13",
     "redux-actions": "^3.0.0"
   },
   "devDependencies": {
