--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
     "js-guid": "^1.0.2",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "next": "14.1.3",
     "react": "^18",
