--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 
 /backend/src/Boxfusion.LMS_Backend.Web.Host/App_Data/Logs/Logs.txt
 /frontend/.env
+/backend/src/Boxfusion.LMS_Backend.Web.Host/App_Data/Logs/Logs.txt
