--- a/backend/src/Boxfusion.LMS_Backend.Core/Boxfusion.LMS_Backend.Core.csproj
+++ b/backend/src/Boxfusion.LMS_Backend.Core/Boxfusion.LMS_Backend.Core.csproj
@@ -17,6 +17,10 @@
   <ItemGroup>
     <PackageReference Include="Abp.AutoMapper" Version="9.1.0" />
     <PackageReference Include="Abp.ZeroCore.EntityFrameworkCore" Version="9.1.0" />
+    <PackageReference Include="Azure.Communication.Email" Version="1.0.1" />
+    <PackageReference Include="Azure.Communication.Messages" Version="1.0.0" />
+    <PackageReference Include="Azure.Communication.PhoneNumbers" Version="1.1.0" />
+    <PackageReference Include="Azure.Communication.Sms" Version="1.0.1" />
     <PackageReference Include="Castle.Windsor.MsDependencyInjection" Version="4.1.0" />
   </ItemGroup>
 </Project>
