--- a/backend/src/Boxfusion.LMS_Backend.EntityFrameworkCore/Boxfusion.LMS_Backend.EntityFrameworkCore.csproj
+++ b/backend/src/Boxfusion.LMS_Backend.EntityFrameworkCore/Boxfusion.LMS_Backend.EntityFrameworkCore.csproj
@@ -13,6 +13,10 @@
     <Compile Remove="Migrations\20190111071724_Upgraded_To_Abp_v4_1_0.cs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Azure.Communication.Email" Version="1.0.1" />
+    <PackageReference Include="Azure.Communication.Messages" Version="1.0.0" />
+    <PackageReference Include="Azure.Communication.PhoneNumbers" Version="1.1.0" />
+    <PackageReference Include="Azure.Communication.Sms" Version="1.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0">
       <PrivateAssets>all</PrivateAssets>
