--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /backend/src/Boxfusion.LMS_Backend.Web.Host/App_Data/Logs/
 /frontend/.env
 backend/src/Boxfusion.LMS_Backend.Web.Host/App_Data/Logs/
+backend/src/Boxfusion.LMS_Backend.Web.Host/App_Data/Logs/Logs.txt.1
+backend/src/Boxfusion.LMS_Backend.Web.Host/App_Data/Logs/Logs.txt.1
