--- a/backend/src/Boxfusion.LMS_Backend.Application/Boxfusion.LMS_Backend.Application.csproj
+++ b/backend/src/Boxfusion.LMS_Backend.Application/Boxfusion.LMS_Backend.Application.csproj
@@ -12,6 +12,12 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Azure.Communication.Email" Version="1.0.1" />
+    <PackageReference Include="Azure.Communication.Messages" Version="1.0.0" />
+    <PackageReference Include="Azure.Communication.PhoneNumbers" Version="1.1.0" />
+    <PackageReference Include="Azure.Communication.Sms" Version="1.0.1" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Boxfusion.LMS_Backend.Core\Boxfusion.LMS_Backend.Core.csproj" />
   </ItemGroup>
 </Project>
