--- a/backend/src/Boxfusion.LMS_Backend.Migrator/Boxfusion.LMS_Backend.Migrator.csproj
+++ b/backend/src/Boxfusion.LMS_Backend.Migrator/Boxfusion.LMS_Backend.Migrator.csproj
@@ -16,6 +16,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Abp.Castle.Log4Net" Version="9.1.0" />
+    <PackageReference Include="Azure.Communication.Email" Version="1.0.1" />
+    <PackageReference Include="Azure.Communication.Messages" Version="1.0.0" />
+    <PackageReference Include="Azure.Communication.PhoneNumbers" Version="1.1.0" />
+    <PackageReference Include="Azure.Communication.Sms" Version="1.0.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Boxfusion.LMS_Backend.Core\Boxfusion.LMS_Backend.Core.csproj" />
