--- a/backend/test/Boxfusion.LMS_Backend.Tests/Boxfusion.LMS_Backend.Tests.csproj
+++ b/backend/test/Boxfusion.LMS_Backend.Tests/Boxfusion.LMS_Backend.Tests.csproj
@@ -15,6 +15,10 @@
     <ProjectReference Include="..\..\src\Boxfusion.LMS_Backend.EntityFrameworkCore\Boxfusion.LMS_Backend.EntityFrameworkCore.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Azure.Communication.Email" Version="1.0.1" />
+    <PackageReference Include="Azure.Communication.Messages" Version="1.0.0" />
+    <PackageReference Include="Azure.Communication.PhoneNumbers" Version="1.1.0" />
+    <PackageReference Include="Azure.Communication.Sms" Version="1.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="NSubstitute" Version="5.1.0" />
     <PackageReference Include="Shouldly" Version="4.2.1" />
