--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 backend/src/Boxfusion.LMS_Backend.Web.Host/App_Data/Logs/
 backend/src/Boxfusion.LMS_Backend.Web.Host/App_Data/Logs/Logs.txt.1
 backend/src/Boxfusion.LMS_Backend.Web.Host/App_Data/Logs/Logs.txt.1
+/backend/src/Boxfusion.LMS_Backend.Web.Host/App_Data/Logs/Logs.txt.1
+/backend/src/Boxfusion.LMS_Backend.Web.Host/App_Data/Logs/Logs.txt.2
+/backend/src/Boxfusion.LMS_Backend.Web.Host/App_Data/Logs/Logs.txt.10
+/backend/src/Boxfusion.LMS_Backend.Web.Host/App_Data/Logs/Logs.txt.3
