--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18",
     "react-error-boundary": "^4.0.13",
     "redux-actions": "^3.0.0",
+    "remixicon": "^4.2.0",
     "remixicons": "^1.0.0"
   },
   "devDependencies": {
