further code cleanup (removing unnecessary comments )

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.5",
+    "@tanstack/react-table": "^8.15.3",
     "antd": "^5.15.2",
     "antd-style": "^3.6.1",
     "axios": "^1.6.8",
