supporting user profile pic upload and query

--- a/backend/src/Boxfusion.LMS_Backend.Web.Host/Boxfusion.LMS_Backend.Web.Host.csproj
+++ b/backend/src/Boxfusion.LMS_Backend.Web.Host/Boxfusion.LMS_Backend.Web.Host.csproj
@@ -47,4 +47,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="App_Data\Images\" />
+  </ItemGroup>
 </Project>
