turns out there's no problem building if the localStorage is used from within the useEffect

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ backend/src/Boxfusion.LMS_Backend.Web.Host/App_Data/Logs/Logs.txt.1
 /backend/src/Boxfusion.LMS_Backend.Web.Host/App_Data/Logs/Logs.txt.3
 
 .fake
+.vscode/settings.json
